bg,sweetalert2,active menu,....

--- a/views/addrequest.ejs
+++ b/views/addrequest.ejs
@@ -1,9 +1,9 @@
 <%- include('partials/header'); -%>
 
-<div class="container main-body pt-lg-4  pr-md-5 pl-md-5">
-   <div class="row   pt-5 pb-5  pr-md-5 pl-md-5 align-items-center   justify-content-center ">
+<div class="container main-body pt-lg-4    pr-lg-5  pl-lg-5">
+   <div class="row   pt-5 pb-5    pr-lg-5  pl-lg-5 align-items-center   justify-content-center ">
 
-      <div class="col-md-6   pb-md-5 pt-0  pr-md-5 pl-md-5 text-right ">
+      <div class="col-md-6     pb-md-5 pt-0    pr-lg-5  pl-lg-5 text-right ">
 
          <h1 class="h1-responsive font-weight-bold"> اضافة طلب تبرع </h1>
          <hr class="hr-light">
@@ -15,7 +15,7 @@
             <div class="input-group mb-3 ">
                <div class="input-group-prepend  w-100">
                   <select dir="rtl" name="PatientState" class="custom-select custom-select-md  md-form colorful-select dropdown-primary ">
-                     <option value="S" autofocus>مستقرة</option>
+                     <option value="S">مستقرة</option>
                      <option value="D">حرجة</option>
                   </select>
                   <span class="input-group-text    form-icon"><i class="fas fa-heartbeat  mr-auto ml-auto"></i></span>
