--- a/views/donorstate.ejs
+++ b/views/donorstate.ejs
@@ -1,20 +1,24 @@
 <%-include("partials/header")-%>
-<div class="container main-body pt-lg-4  pr-md-5 pl-md-5">
-   <div class="row   pt-5 pb-5  pr-md-5 pl-md-5 align-items-center   justify-content-center ">
+<div class="container main-body pt-lg-4    pr-lg-5  pl-lg-5">
+   <div class="row   pt-5 pb-5    pr-lg-5  pl-lg-5 align-items-center   justify-content-center ">
 
-      <div class="col-md-6   pb-md-5 pt-0  pr-md-5 pl-md-5 text-right ">
+      <div class="col-md-6     pb-md-5 pt-0    pr-lg-5  pl-lg-5 text-md-right text-center">
 
-         <h2 class="h1-responsive font-weight-bold">معلومات المتبرع </h2>
+         <h3 class="h1-responsive font-weight-bold">معلومات المتبرع </h3>
+         <h2 dir="ltr"><%=_phoneNumber%></h2>
          <hr class="hr-light">
-         <h6 class="text-right main-text"> هل انت مستعد حاليا للتبرع؟</h6>
+         <p>تسمح هذة الصفحة بتحديد استعداد المتبرع للتبرع في هذه الفترة ام لا,وبالتالي تلقي طلبات التبرع ام لا
+            .</p>
+
       </div>
       <div class="col-md-6    text-right">
-         <form action="/addrequest" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
+         <form action="/donorstate" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
+            <h5 class="text-right main-text"> هل انت مستعد حاليا للتبرع؟</h5>
 
             <div class="input-group mb-3 ">
                <div class="input-group-prepend  w-100">
                   <select dir="rtl" name="donorState" class="custom-select custom-select-md  md-form colorful-select dropdown-primary ">
-                     <option value="S" autofocus>نعم </option>
+                     <option value="S">نعم </option>
                      <option value="D">لا</option>
                   </select>
 
