--- a/views/partials/wilaya.ejs
+++ b/views/partials/wilaya.ejs
@@ -2,7 +2,7 @@
 
 <div class="input-group mb-3 ">
    <div class="input-group-prepend  w-100">
-      <select dir="rtl" name="city" class="custom-select custom-select-md  md-form colorful-select dropdown-primary  ">
+      <select dir="rtl" name="cityCode" class="custom-select custom-select-md  md-form colorful-select dropdown-primary  ">
          <option value="01">01-ولاية أدرار</option>
          <option value="02">02-ولاية الشلف</option>
          <option value="03">03-ولاية الأغواط</option>
