--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,8 +1,8 @@
 <%-include("partials/header")-%>
-<div class="container main-body pt-lg-4  pr-md-5 pl-md-5">
-   <div class="row   pt-5 pb-5  pr-md-5 pl-md-5 align-items-center   justify-content-center " style=" ">
+<div class="container main-body pt-lg-4    pr-lg-5  pl-lg-5">
+   <div class="row   pt-5 pb-5    pr-lg-5  pl-lg-5 align-items-center   justify-content-center ">
 
-      <div class="col-md-6   pb-md-5 pt-0  pr-md-5 pl-md-5 text-right ">
+      <div class="col-md-6     pb-md-5 pt-0    pr-lg-5  pl-lg-5 text-right ">
 
          <h4> </h4>
 
@@ -14,7 +14,7 @@
          <form action="/signin" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
 
             <div class="input-group mb-3">
-               <input type="text" dir="ltr" class="form-control  text-right" id="tel" name="tel" placeholder="رقم الهاتف" aria-label="Username" aria-describedby="basic-addon1" required autocomplete="off" autofocus onfocus="this.value=''">
+               <input type="text" dir="ltr" class="form-control  text-right" id="tel" name="tel" placeholder="رقم الهاتف" aria-label="Username" aria-describedby="basic-addon1" required autocomplete="off" onfocus="this.value=''">
                <div class="input-group-prepend">
                   <span class="input-group-text    form-icon"><i class="fas fa-mobile-alt  mr-auto ml-auto"></i></span>
                </div>
