--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,22 @@
 /****************************    GLOBAL   *****************************/
 :root {
+   /****** menu ********/
+   --logo-color: #e38983;
+   --logo-color-hover: #fa021b;
+   --logo-color-active: #e61328;
+
+   --menu-item-color: #000;
+   --menu-item-color-hover-active: #e38983;
+   --menu-bg-color: #efdee012;
+
+   /****** main ********/
    --main-color: darkred;
-   --bg-color: #e0828212;
+   --button-bg-color: #c31313;
+
+   /****** footer ********/
+   --social-color: #fdeae4;
+   --social-color-hover: darkred;
+
 }
 
 html {
@@ -20,7 +35,9 @@ body {
 body {
    font-family: 'Cairo', sans-serif;
    margin-bottom: 60px;
-   background-color: var(--bg-color);
+   background: transparent;
+   background-image: -webkit-linear-gradient(65deg, #e38983 50%, #fdeae4 50%);
+   background-size: cover;
 
 }
 
@@ -29,7 +46,39 @@ hr {
 
 }
 
+.btn-danger {
+   background: var(--button-bg-color);
+   font-size: 1.3rem;
+}
+
 /****************************    MENU   *****************************/
+.thelogo strong {
+   color: var(--logo-color);
+   font-size: 2rem;
+   font-weight: bold;
+}
+
+.navbar-light .nav-item {
+   font-size: 1.2rem;
+   margin: 5px;
+}
+
+.navbar-light .nav-item .nav-link {
+   color: var(--menu-color);
+   border-radius: 10px;
+}
+
+.navbar-light .nav-item .nav-link:hover {
+   color: var(--menu-item-color-hover-active);
+   background: var(--menu-bg-color);
+
+}
+
+.navbar-light .nav-item .nav-link.active {
+   color: var(--menu-item-color-hover-active);
+   background: var(--menu-bg-color);
+
+}
 
 /****************************    BODY   *****************************/
 .main-text-bloc {
@@ -42,12 +91,23 @@ hr {
    line-height: 1.5;
 }
 
+div h1,
+h3 {
+   color: #e38983;
+
+}
+
 /*      form        */
 .form {
    width: 300px;
    min-width: 300px;
    padding: 0;
+   opacity: 0.9;
 
+}
+
+.btn-danger {
+   margin-top: 25px;
 }
 
 .jCaptchaText {
@@ -118,14 +178,24 @@ hr {
    bottom: 0;
    width: 100%;
    height: 60px;
-   /* Set the fixed height of the footer here */
+   color: var(--social-color);
 
+   /* Set the fixed height of the footer here */
 }
 
 .footer p {
    margin: 0;
+
 }
 
-.container-fluid {
-   padding: 0;
+.footer div a {
+   text-decoration: none;
+   color: var(--social-color);
+
+}
+
+.footer div a:hover {
+
+   color: var(--social-color-hover);
+
 }
