--- a/views/getcode.ejs
+++ b/views/getcode.ejs
@@ -1,20 +1,20 @@
 <%-include("partials/header")-%>
-<div class="container main-body pt-lg-4  pr-md-5 pl-md-5">
-   <div class="row   pt-5 pb-5  pr-md-5 pl-md-5 align-items-center   justify-content-center ">
+<div class="container main-body pt-lg-4    pr-lg-5  pl-lg-5">
+   <div class="row   pt-5 pb-5    pr-lg-5  pl-lg-5 align-items-center   justify-content-center ">
 
-      <div class="col-md-6   pb-md-5 pt-0  pr-md-5 pl-md-5 text-right ">
+      <div class="col-md-6     pb-md-5 pt-0    pr-lg-5  pl-lg-5 text-right ">
 
          <h4> </h4>
 
-         <h1 class="h1-responsive font-weight-bold">منصة تبرع</h1>
+         <h3 class="h1-responsive font-weight-bold">استرجاع الكود</h3>
          <hr class="hr-light">
-         <h6 class="text-right main-text">استرجاع الكود</h6>
+
       </div>
       <div class="col-md-6    text-right">
          <form action="/getcode" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
 
             <div class="input-group mb-3">
-               <input type="text" dir="ltr" class="form-control  text-right" id="tel" name="tel" placeholder="رقم الهاتف" aria-label="Username" aria-describedby="basic-addon1" required autocomplete="off" autofocus onfocus="this.value=''">
+               <input type="text" dir="ltr" class="form-control  text-right" id="tel" name="phoneNumber" placeholder="رقم الهاتف" aria-label="Username" aria-describedby="basic-addon1" required autocomplete="off" onfocus="this.value=''">
                <div class="input-group-prepend">
                   <span class="input-group-text    form-icon"><i class="fas fa-mobile-alt  mr-auto ml-auto"></i></span>
                </div>
