--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,9 @@
 <%- include("partials/header") -%>
 
-<div class="container main-body pt-lg-4  pr-md-5 pl-md-5">
-   <div class="row   pt-5 pb-5  pr-md-5 pl-md-5 align-items-center   justify-content-center ">
+<div class="container main-body pt-lg-4    pr-lg-5  pl-lg-5">
+   <div class="row   pt-5 pb-5    pr-lg-5  pl-lg-5 align-items-center   justify-content-center ">
 
-      <div class="col-md-6   pb-md-5 pt-0  pr-md-5 pl-md-5 text-right ">
+      <div class="col-md-6     pb-md-5 pt-0    pr-lg-5  pl-lg-5 text-right ">
          <h1 class="h1-responsive text-sm-center text-md-right font-weight-bold ">منصة تبرع</h1>
          <hr class="hr-light">
          <h6 class="  main-text  text-justify">الجَزائِر أو، وب هي دولة عربية ذات سيادة تقع في شمال أفريقيا. عاصمتها وأكثر مدنها اكتظاظا بالسكان هي مدينة الجزائر، وتقع في أقصى شمال البلاد. بمساحة تبلغ 2،381،741 كيلومتر مربع، الجزائر هي عاشر أكبر بلد في العالم.</h6>
@@ -12,14 +12,14 @@
          <form action="/" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
 
             <div class="input-group mb-3">
-               <input type="text" dir="ltr" class="form-control  text-right" id="tel" name="tel" placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
+               <input type="text" dir="ltr" class="form-control  text-right" id="tel" name="tel" placeholder="رقم الهاتف" required autocomplete="off" onfocus="this.value=''">
                <div class="input-group-prepend">
                   <span class="input-group-text    form-icon"><i class="fas fa-mobile-alt  mr-auto ml-auto"></i></span>
                </div>
             </div>
 
             <div class="input-group mb-3">
-               <input type="password" class="form-control  text-right" id="Password" name="password" placeholder="الكود" required autocomplete="off" onfocus="this.value=''" maxlength="5">
+               <input type="password" class="form-control  text-right" id="Password" name="code" placeholder="رمز الدخول" required autocomplete="off" onfocus="this.value=''" maxlength="5">
                <div class="input-group-prepend">
                   <span class="input-group-text    form-icon"><i class="fas fa-key  mr-auto ml-auto "></i></span>
                </div>
