--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,25 +20,19 @@
 }
 
 html {
+   margin: 0;
+   padding: 0;
    position: relative;
    min-height: 100%;
 
 }
 
-html,
 body {
    margin: 0;
    padding: 0;
-
-}
-
-body {
    font-family: 'Cairo', sans-serif;
-   margin-bottom: 60px;
-   background: transparent;
+   margin-bottom: 80px;
    background-image: -webkit-linear-gradient(65deg, #e38983 50%, #fdeae4 50%);
-   background-size: cover;
-
 }
 
 hr {
@@ -177,7 +171,7 @@ h3 {
    position: absolute;
    bottom: 0;
    width: 100%;
-   height: 60px;
+   height: 80px;
    color: var(--social-color);
 
    /* Set the fixed height of the footer here */
