--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,16 @@
       <div class="col-md-6     pb-md-5 pt-0    pr-lg-5  pl-lg-5 text-right ">
          <h1 class="h1-responsive text-sm-center text-md-right font-weight-bold ">منصة تبرع</h1>
          <hr class="hr-light">
-         <h6 class="  main-text  text-justify">الجَزائِر أو، وب هي دولة عربية ذات سيادة تقع في شمال أفريقيا. عاصمتها وأكثر مدنها اكتظاظا بالسكان هي مدينة الجزائر، وتقع في أقصى شمال البلاد. بمساحة تبلغ 2،381،741 كيلومتر مربع، الجزائر هي عاشر أكبر بلد في العالم.</h6>
+         <h6 class="  main-text  text-justify">تطبيق يهدف لمساعدة المرضى على ايجاد متبرع بالدم عبر:
+            <ul class="pl-2">
+               <li>ادراج طلب تبرع من طرف المريض. </li>
+               <li>يرسل الموقع رسالة نصية الى المتبرعين المسجلين والمتوافقين مع فصيلة دم المريض ومنطقته الجغرافية. </li>
+               <li>تحوي الرسالة رقم هاتف المريض وموقعه. </li>
+               <li>تحترم الخصوصية ويستعمل اقل قدر ممكن من البيانات. </li>
+               <li>يعلم المريض بعدد المتبرعين الذين تم الاتصال بهم عبر حسابه في الموقع. </li>
+
+            </ul>
+         </h6>
       </div>
       <div class="col-md-6    text-right">
          <form action="/" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
