--- a/views/addrequest.ejs
+++ b/views/addrequest.ejs
@@ -4,11 +4,11 @@
    <div class="row   pt-4 pb-4    pr-lg-5  pl-lg-5 align-items-center   justify-content-center ">
 
       <div class="col-md-6     pb-md-5 pt-0    pr-lg-5  pl-lg-5 text-right ">
-
-         <h1 class="h1-responsive font-weight-bold"> اضافة طلب تبرع </h1>
+         <h2 class="h1-responsive font-weight-bold"> اضافة طلب تبرع </h2>
+         <h2 dir="ltr"><%=_phoneNumber%></h2>
          <hr class="hr-light">
-         <h6 class="text-right main-text" dir="ltr"> <%=_phoneNumber%></h6>
       </div>
+
       <div class="col-md-6    text-right">
          <form action="/addrequest" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
 
@@ -34,8 +34,6 @@
          </form>
       </div>
    </div>
-</div>
-
 </div>
 
 <!--  <div class=" label">سلامتك, كيف تصف حالتك؟</div> -->
