--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
+</div>
 <footer class="footer" id="footer">
    <div class="container-fluid text-center">
       <a href="/contactus"> <i class="social-icon fab fa-facebook-f pl-1 pr-1"></i></a>
