--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,29 +1,25 @@
 <%-include("partials/header")-%>
-<div class="container main-body pt-lg-4    pr-lg-5  pl-lg-5">
-   <div class="row   pt-4 pb-4    pr-lg-5  pl-lg-5 align-items-center   justify-content-center ">
+<div class="row   pt-4 pb-4    pr-lg-5  pl-lg-5 align-items-center justify-content-center ">
+   <div class="col-md-6 pb-md-5 pt-0 pr-lg-5  pl-lg-5 text-right ">
 
-      <div class="col-md-6     pb-md-5 pt-0    pr-lg-5  pl-lg-5 text-right ">
+      <h2 class="h1-responsive font-weight-bold ">منصة تبرع</h2>
+      <h6 class="text-right main-text">إنشاء حساب جديد .</h6>
+      <hr class="hr-light">
+      <p>بعد التسجيل سنتوصل معك عبر رسالة نصية تحتوي على رمز الدخول الخاص بك.</p>
+   </div>
+   <div class="col-md-6    text-right">
+      <form action="/signin" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
 
-         <h4> </h4>
-
-         <h1 class="h1-responsive font-weight-bold ">منصة تبرع</h1>
-         <hr class="hr-light">
-         <h6 class="text-right main-text">إنشاء حساب جديد .</h6>
-      </div>
-      <div class="col-md-6    text-right">
-         <form action="/signin" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
-
-            <div class="input-group mb-3">
-               <input type="text" dir="ltr" class="form-control  text-right" id="tel" name="tel" placeholder="رقم الهاتف" aria-label="Username" aria-describedby="basic-addon1" required autocomplete="off" onfocus="this.value=''">
-               <div class="input-group-prepend">
-                  <span class="input-group-text    form-icon"><i class="fas fa-mobile-alt  mr-auto ml-auto"></i></span>
-               </div>
+         <div class="input-group mb-3">
+            <input type="text" dir="ltr" class="form-control  text-right" id="tel" name="tel" placeholder="رقم الهاتف" aria-label="Username" aria-describedby="basic-addon1" required autocomplete="off" onfocus="this.value=''">
+            <div class="input-group-prepend">
+               <span class="input-group-text    form-icon"><i class="fas fa-mobile-alt  mr-auto ml-auto"></i></span>
             </div>
+         </div>
 
-            <%- include("partials/captcha") -%>
-            <button class="btn btn-danger btn-block" type="submit">دخول</button>
-         </form>
-      </div>
+         <%- include("partials/captcha") -%>
+         <button class="btn btn-danger btn-block" type="submit">دخول</button>
+      </form>
    </div>
 </div>
 
