--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,11 +40,6 @@ hr {
 
 }
 
-.btn-danger {
-   background: var(--button-bg-color);
-   font-size: 1.3rem;
-}
-
 /****************************    MENU   *****************************/
 .thelogo strong {
    color: var(--logo-color);
@@ -76,9 +71,9 @@ hr {
 
 /****************************    BODY   *****************************/
 .main-text-bloc {
+
    padding-left: 30px;
    padding-right: 30px;
-
 }
 
 .main-text {
@@ -86,6 +81,7 @@ hr {
 }
 
 div h1,
+h2,
 h3 {
    color: #e38983;
 
@@ -93,23 +89,11 @@ h3 {
 
 /*      form        */
 .form {
+
    width: 300px;
    min-width: 300px;
    padding: 0;
    opacity: 0.9;
-
-}
-
-.btn-danger {
-   margin-top: 25px;
-}
-
-.jCaptchaText {
-   margin-bottom: 10px;
-}
-
-.jCaptcha {
-   margin-bottom: 10px;
 }
 
 .form-control {
@@ -133,37 +117,19 @@ h3 {
    text-align: right;
 }
 
-/** notifications **/
-.notify {
-   display: block;
-   background: #fff;
-   padding: 12px 18px;
-   width: 300px;
-   margin: 70px auto;
-   -webkit-border-radius: 3px;
-   -moz-border-radius: 3px;
-   border-radius: 3px;
-   margin-bottom: 20px;
-   box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 2px 0px;
-   text-align: center;
-}
-
-.notify h1 {
-   margin-bottom: 6px;
-}
-
-.successbox {
-   color: #678361;
-}
-
-.errorbox {
-   color: #6f423b;
-}
-
-.notify .alerticon {
-   display: block;
-   text-align: center;
+.jCaptchaText {
    margin-bottom: 10px;
+}
+
+.jCaptcha {
+   margin-bottom: 10px;
+}
+
+.btn-danger {
+
+   background: var(--button-bg-color);
+   font-size: 1.3rem;
+   margin-top: 25px;
 }
 
 /****************************    FOOTER   *****************************/
