--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -5,7 +5,7 @@
       <h2 class="h1-responsive font-weight-bold ">منصة تبرع</h2>
       <h6 class="text-right main-text">إنشاء حساب جديد .</h6>
       <hr class="hr-light">
-      <p>بعد التسجيل سنتوصل معك عبر رسالة نصية تحتوي على رمز الدخول الخاص بك.</p>
+      <p>بعد التسجيل سنتواصل معك عبر رسالة نصية تحتوي على رمز الدخول الخاص بك.</p>
    </div>
    <div class="col-md-6    text-right">
       <form action="/signin" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
