--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -3,7 +3,7 @@
 <div class="row  align-items-center   justify-content-center pt-2 pb-5  ">
    <div class="col-md-12   text-right">
       <h3 class="text-center main-text"> يسرنا تواصلك معنا</h3>
-      <form action="/contactus" class="form    mr-auto ml-auto pt-md-3" method="POST">
+      <form action="/contactus" class="form shadow-sm   mr-auto ml-auto pt-md-3" method="POST">
 
          <div class="input-group mb-3">
             <input type="text" dir="ltr" class="form-control  text-right" id="name" name="name" placeholder=" الإسم الكريم" aria-label="Username" aria-describedby="basic-addon1" required autocomplete="off" onfocus="this.value=''">
