--- a/views/getcode.ejs
+++ b/views/getcode.ejs
@@ -1,16 +1,13 @@
 <%-include("partials/header")-%>
-<div class="row   pt-4 pb-4    pr-lg-5  pl-lg-5 align-items-center   justify-content-center ">
+<div class="row   pt-4 pb-4    pr-lg-5  pl-lg-5 justify-content-center ">
 
-   <div class="col-md-6     pb-md-5 pt-0    pr-lg-5  pl-lg-5 text-right ">
-
-      <h4> </h4>
-
+   <div class="col-md-6     my-md-auto pt-0    pr-lg-5  pl-lg-5 text-right ">
       <h3 class="h1-responsive font-weight-bold">استرجاع الكود</h3>
       <h6 class="text-right main-text">ادخل رقم هاتفك لاسترجاع رمز الدخول</h6>
       <hr class="hr-light">
-
    </div>
-   <div class="col-md-6    text-right">
+
+   <div class="col-md-6  my-md-auto  text-right">
       <form action="/getcode" class="form  mr-md-0 mr-auto ml-auto pt-md-3" method="POST">
 
          <div class="input-group mb-3">
