--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-   <div class="header">
+   <div class="header mb-md-3">
       <div class="container-fluid  ">
 
          <nav class="navbar navbar-expand-md navbar-light pr-0 ">
@@ -65,4 +65,4 @@
          </nav>
       </div>
    </div>
-   <div class="container pt-lg-5 pr-lg-5  pl-lg-5">
+   <div class="container pt-lg-5 pr-lg-5  pl-lg-5 ">
