--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,13 @@
 </div>
+</div>
 <footer class="footer" id="footer">
-   <div class="container-fluid text-center">
+   <div class="container text-center">
+      <p>آخر تحديث <span>05/04/2019</span></p>
       <a href="/contactus"> <i class="social-icon fab fa-facebook-f pl-1 pr-1"></i></a>
       <a href="/contactus"><i class="social-icon fab fa-twitter pl-1 pr-1"></i></a>
       <a href="/contactus"><i class="social-icon fab fa-instagram pl-1 pr-1"></i></a>
       <a href="/contactus"><i class="social-icon fas fa-envelope pl-1 pr-1"></i></a>
-      <p>منصة تواصل بين المرضى و المتبرعين بالدم عبر
+      <p style="overflow-y: hidden;">منصة تواصل بين المرضى و المتبرعين بالدم عبر
          <span> SMS </span></p>
    </div>
 </footer>
@@ -13,7 +15,7 @@
 <%- include("message") -%>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+<!-- </div> -->
 </body>
 
 </html>
