--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,11 +32,13 @@
 </head>
 
 <body>
-   <div class="header mb-md-3">
-      <div class="container-fluid  ">
+   <!--  <div class="mycontainer">
+ -->
+   <div class="header">
+      <div class="container">
 
          <nav class="navbar navbar-expand-md navbar-light pr-0 ">
-            <a class="navbar-brand  mr-0 thelogo" href="/"> <strong>تبرع</strong> </a>
+            <a class="navbar-brand  mr-0 thelogo" href="/"> <strong>تبرع </strong> </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
@@ -65,4 +67,5 @@
          </nav>
       </div>
    </div>
-   <div class="container pt-lg-5 pr-lg-5  pl-lg-5 ">
+   <div class="container  pr-lg-5  pl-lg-5 ">
+      <div class="row  align-items-center pt-md-0 pt-5   pr-lg-5  pl-lg-5 justify-content-center">
