--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,7 @@
 
    --menu-item-color: #000;
    --menu-item-color-hover-active: #e38983;
-   --menu-bg-color: #efdee012;
+   --menu-bg-color: #e3898312;
 
    /****** main ********/
    --main-color: darkred;
@@ -24,16 +24,17 @@ html {
    padding: 0;
    position: relative;
    min-height: 100%;
-   background-image: -webkit-linear-gradient(65deg, #e38983 50%, #fdeae4 50%);
-   background-size: cover;
+
 }
 
 body {
    margin: 0;
    padding: 0;
+   width: 100%;
    font-family: 'Cairo', sans-serif;
-   margin-bottom: 80px;
-   background: none;
+   margin-bottom: 90px;
+   background-image: -webkit-linear-gradient(65deg, #e38983 50%, #fdeae4 50%);
+   background-size: cover;
 }
 
 hr {
@@ -48,6 +49,10 @@ hr {
    font-weight: bold;
 }
 
+.header {
+   background-color: var(--menu-bg-color);
+}
+
 .navbar-light .nav-item {
    font-size: 1.2rem;
    margin: 5px;
@@ -60,20 +65,18 @@ hr {
 
 .navbar-light .nav-item .nav-link:hover {
    color: var(--menu-item-color-hover-active);
-   background: var(--menu-bg-color);
 
 }
 
 .navbar-light .nav-item .nav-link.active {
    color: var(--menu-item-color-hover-active);
-   background: var(--menu-bg-color);
 
 }
 
 /****************************    BODY   *****************************/
 
 .row {
-   min-height: 400px;
+   min-height: 500px;
 }
 
 .main-text-bloc {
@@ -82,7 +85,7 @@ hr {
    padding-right: 30px;
 }
 
-.main-text {
+.p-line-height {
    line-height: 1.5;
 }
 
@@ -144,8 +147,10 @@ h3 {
    position: absolute;
    bottom: 0;
    width: 100%;
-   height: 80px;
+   height: 105px;
    color: var(--social-color);
+   overflow: hidden;
+   padding: 5px 0;
 
    /* Set the fixed height of the footer here */
 }
