--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -1,22 +1,24 @@
 <%-include("partials/header")-%>
+<div class="col-md-6  p-0    pr-lg-5  pl-lg-5 text-right ">
+   <h2 class="h1-responsive font-weight-bold"> يسرنا تواصلك معنا</h2>
+   <hr class="hr-light">
+   <p>نرحب بأي استفسار ,اقتراح , دعم للموقع </p>
+</div>
 
-<div class="row  align-items-center   justify-content-center pt-2 pb-5  ">
-   <div class="col-md-12   text-right">
-      <h3 class="text-center main-text"> يسرنا تواصلك معنا</h3>
-      <form action="/contactus" class="form shadow-sm   mr-auto ml-auto pt-md-3" method="POST">
+<div class="col-md-6   text-right">
+   <form action="/contactus" class="form shadow-sm   mr-auto ml-auto pt-md-3" method="POST">
 
-         <div class="input-group mb-3">
-            <input type="text" dir="ltr" class="form-control  text-right" id="name" name="name" placeholder=" الإسم الكريم" aria-label="Username" aria-describedby="basic-addon1" required autocomplete="off" onfocus="this.value=''">
-            <div class="input-group-prepend">
-               <span class="input-group-text    form-icon"><i class="fas fa-user  mr-auto ml-auto"></i></span>
-            </div>
+      <div class="input-group mb-3">
+         <input type="text" dir="ltr" class="form-control  text-right" id="name" name="name" placeholder=" الإسم الكريم" aria-label="Username" aria-describedby="basic-addon1" required autocomplete="off" onfocus="this.value=''">
+         <div class="input-group-prepend">
+            <span class="input-group-text    form-icon"><i class="fas fa-user  mr-auto ml-auto"></i></span>
          </div>
-         <textarea class="form-control  mb-3  " name="content" id="exampleFormControlTextarea1" required rows="5"></textarea>
+      </div>
+      <textarea class="form-control  mb-3  " name="content" id="exampleFormControlTextarea1" required rows="5"></textarea>
 
-         <%- include("partials/captcha") -%>
-         <button class="btn btn-danger btn-block" type="submit">دخول</button>
-      </form>
-   </div>
+      <%- include("partials/captcha") -%>
+      <button class="btn btn-danger btn-block" type="submit">دخول</button>
+   </form>
 </div>
 
 <%- include("partials/footer") -%>
