remove last update

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <footer class="footer" id="footer">
    <div class="container text-center">
-      <p>آخر تحديث <span>05/04/2019</span></p>
+      <!--<p>آخر تحديث <span>05/04/2019</span></p>-->
       <a href="/contactus"> <i class="social-icon fab fa-facebook-f pl-1 pr-1"></i></a>
       <a href="/contactus"><i class="social-icon fab fa-twitter pl-1 pr-1"></i></a>
       <a href="/contactus"><i class="social-icon fab fa-instagram pl-1 pr-1"></i></a>
